--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -183,18 +183,12 @@
    "outputs": [],
    "source": [
     "input_dim, output_dim = 4, 4\n",
-    "max_depth = 16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "max_depth = 16\n",
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_modules = {\n",
+    "neural_dsl = near.NeuralDSL.from_dsl(\n",
+    "    dsl=dsl,\n",
+    "    modules={\n",
     "        **near.create_modules(\n",
     "            \"mlp\",\n",
     "            [t(\"($fL) -> $fL\")],\n",
@@ -205,36 +199,43 @@
     "            [t(\"([$fL]) -> [$fL]\")],\n",
     "            near.rnn_factory_seq2seq(hidden_size=10),\n",
     "        ),\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interface = near.NEAR(\n",
-    "    input_dim=input_dim,\n",
-    "    output_dim=output_dim,\n",
-    "    max_depth=max_depth,\n",
+    "    },\n",
+    ")\n",
+    "logging.getLogger(\"pytorch_lightning.utilities.rank_zero\").setLevel(logging.WARNING)\n",
+    "logging.getLogger(\"pytorch_lightning.accelerators.cuda\").setLevel(logging.WARNING)\n",
+    "\n",
+    "\n",
+    "trainer_cfg = near.NEARTrainerConfig(\n",
     "    lr=5e-3,\n",
     "    max_seq_len=300,\n",
     "    n_epochs=100,\n",
-    "    accelerator=\"cpu\",\n",
-    ")\n",
-    "interface.register_search_params(\n",
-    "    dsl=dsl,\n",
-    "    type_env=t,\n",
-    "    neural_modules=neural_modules,\n",
-    "    search_strategy=ns.search.bounded_astar,\n",
+    "    num_labels=output_dim,\n",
+    "    train_steps=len(datamodule.train),\n",
     "    loss_callback=torch.nn.functional.mse_loss,\n",
-    "    validation_params=dict(\n",
-    "        enable_progress_bar=False,\n",
-    "        enable_model_summary=False,\n",
-    "        progress_by_epoch=True,\n",
-    "    )\n",
-    ")"
+    "    scheduler=\"cosine\",\n",
+    "    optimizer=torch.optim.Adam,\n",
+    ")\n",
+    "\n",
+    "validation_cost = near.ValidationCost(\n",
+    "    neural_dsl=neural_dsl,\n",
+    "    trainer_cfg=trainer_cfg,\n",
+    "    datamodule=datamodule,\n",
+    "    callbacks=[\n",
+    "        pl.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=1e-4, patience=5)\n",
+    "    ],\n",
+    "    enable_progress_bar=False,\n",
+    "    enable_model_summary=False,\n",
+    "    progress_by_epoch=True,\n",
+    ")\n",
+    "\n",
+    "g = near.near_graph(\n",
+    "    neural_dsl,\n",
+    "    ns.parse_type(\n",
+    "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
+    "    ),\n",
+    "    is_goal=neural_dsl.program_has_no_holes,\n",
+    "    max_depth=max_depth\n",
+    ")\n"
    ]
   },
   {
@@ -246,17 +247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "best_programs = interface.fit(\n",
-    "    datamodule=datamodule,\n",
-    "    program_signature=\"([{f, $L}]) -> [{f, $O}]\",\n",
-    "    n_programs=4\n",
-    ")"
+    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
+    "best_program_nodes = []\n",
+    "# Let's collect the top four programs\n",
+    "while len(best_program_nodes) <= 3:\n",
+    "    try:\n",
+    "        node = next(iterator)\n",
+    "        cost = validation_cost(node)\n",
+    "        best_program_nodes.append((node, cost))\n",
+    "        print(\"Got another program\")\n",
+    "    except StopIteration:\n",
+    "        print(\"No more programs found.\")\n",
+    "        break"
    ]
   },
   {
@@ -269,6 +277,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_program_nodes = sorted(best_program_nodes, key=lambda x: x[1])\n",
+    "for i, (node, cost) in enumerate(best_program_nodes):\n",
+    "    print(\n",
+    "        \"({i}) Cost: {cost:.4f}, {program}\".format(\n",
+    "            i=i, program=ns.render_s_expression(node.program), cost=cost\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -277,29 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_program_nodes = [(p, None) for p in best_programs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def testProgram(best_program_node):\n",
-    "    module = interface.train_program(\n",
-    "        best_program_node[0].program,\n",
-    "        datamodule,\n",
+    "    module = near.TorchProgramModule(\n",
+    "        dsl=neural_dsl, program=best_program_node[0].program\n",
+    "    )\n",
+    "    pl_model = near.NEARTrainer(module, config=trainer_cfg)\n",
+    "    trainer = pl.Trainer(\n",
     "        max_epochs=4000,\n",
+    "        devices=\"auto\",\n",
+    "        accelerator=\"cpu\",\n",
+    "        enable_checkpointing=False,\n",
+    "        logger=False,\n",
     "        callbacks=[\n",
     "            pl.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=1e-4, patience=5)\n",
     "        ],\n",
     "        enable_progress_bar=False,\n",
     "    )\n",
+    "\n",
+    "    trainer.fit(pl_model, datamodule.train_dataloader(), datamodule.val_dataloader())\n",
     "    T = 100\n",
     "    path = np.zeros((T, 4))\n",
     "    X = torch.tensor(\n",
@@ -314,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
