--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -259,7 +259,7 @@
     "t.typedef(\"fL\", \"{f, $L}\")\n",
     "neural_modules = {\n",
     "        **near.create_modules(\n",
-    "            \"mlp\",\n",
+    "            \"transformer\",\n",
     "            [t(\"($fL) -> $fL\"), t(\"($fL) -> {f, 1}\"), t(\"([$fL]) -> [$fL]\")],\n",
     "            near.transformer_factory(hidden_size=24),\n",
     "        ),\n",
