--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -545,7 +545,7 @@
     "    ns.parse_type(\n",
     "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "    ),\n",
-    "    is_goal=neural_dsl.program_has_no_holes,\n",
+    "    is_goal=lambda _: True,\n",
     "    max_depth=max_depth,\n",
     ")\n",
     "# END SOLUTION\n",
