--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -243,7 +243,8 @@
    "source": [
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_modules = {\n",
+    "neural_modules = ns.DictionaryHoleFiller(\n",
+    "    {\n",
     "        **near.create_modules(\n",
     "            [t(\"($fL) -> $fL\")],\n",
     "            near.mlp_factory(hidden_size=10),\n",
@@ -252,7 +253,8 @@
     "            [t(\"([$fL]) -> [$fL]\")],\n",
     "            near.rnn_factory_seq2seq(hidden_size=10),\n",
     "        ),\n",
-    "    }"
+    "    }\n",
+    ")"
    ]
   },
   {
