--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -318,7 +318,7 @@
     "trainer_cfg = near.NEARTrainerConfig(\n",
     "    lr=1e-3,\n",
     "    max_seq_len=100,\n",
-    "    n_epochs=30,\n",
+    "    n_epochs=100,\n",
     "    num_labels=output_dim,\n",
     "    train_steps=len(datamodule.train),\n",
     "    loss_callback=regression_smooth_l1_loss,\n",
@@ -437,23 +437,7 @@
    "outputs": [],
    "source": [
     "best_program_node = best_program_nodes[0]\n",
-    "module = near.TorchProgramModule(dsl=neural_dsl, program=best_program_node[0].program)\n",
-    "# # a satisfactory set of weights. @TODO: Remove\n",
-    "# # lin.weight.data = torch.tensor([[0., 1.], [0., 0.]])\n",
-    "# lin.bias.data = torch.tensor([0., 0.])\n",
-    "pl_model = near.NEARTrainer(module, config=trainer_cfg)\n",
-    "trainer = pl.Trainer(\n",
-    "    max_epochs=2000,\n",
-    "    devices=\"auto\",\n",
-    "    accelerator=\"cpu\",\n",
-    "    enable_checkpointing=False,\n",
-    "    enable_model_summary=False,\n",
-    "    enable_progress_bar=False,\n",
-    "    logger=False,\n",
-    "    deterministic=True,\n",
-    ")\n",
-    "\n",
-    "trainer.fit(pl_model, datamodule.train_dataloader(), datamodule.val_dataloader())\n",
+    "module, _ = validation_cost.validate_model(best_program_node[0].program)\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
@@ -480,13 +464,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -502,11 +479,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
